[gd_scene load_steps=11 format=3 uid="uid://m4axdvjxalju"]

[ext_resource type="Script" uid="uid://dtcw80cqq0sfq" path="res://roni_meki.gd" id="1_qr3wl"]
[ext_resource type="AudioStream" uid="uid://pyqxf6kxfi6h" path="res://sounds/deathvoice.ogg" id="2_qr3wl"]
[ext_resource type="Texture2D" uid="uid://djlpb78807l4e" path="res://images/base_roni.png" id="3_htr52"]
[ext_resource type="Texture2D" uid="uid://by1suj2foao87" path="res://images/Laugh1.png" id="4_qacrc"]
[ext_resource type="AudioStream" uid="uid://d1rdt31rs3dhp" path="res://sounds/nyamnyam.ogg" id="5_qr3wl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_agsuu"]
radius = 54.0833

[sub_resource type="AtlasTexture" id="AtlasTexture_3gxjv"]
atlas = ExtResource("3_htr52")
region = Rect2(0, 0, 225, 210)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba170"]
atlas = ExtResource("3_htr52")
region = Rect2(225, 0, 225, 210)

[sub_resource type="SpriteFrames" id="SpriteFrames_43jnw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gxjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba170")
}],
"loop": true,
"name": &"yourdeath",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahim6"]
size = Vector2(425, 399)

[node name="RoniMeki" type="CharacterBody2D"]
position = Vector2(1, 2)
script = ExtResource("1_qr3wl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 3)
shape = SubResource("CircleShape2D_agsuu")

[node name="BaseRoni" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_43jnw")
animation = &"yourdeath"

[node name="deathsound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 3)
stream = ExtResource("2_qr3wl")
volume_db = -25.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7, 7)
texture = ExtResource("3_htr52")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(-6, 2)
texture = ExtResource("4_qacrc")

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-61.5, -67.5)
shape = SubResource("RectangleShape2D_ahim6")

[node name="nyamnyam" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qr3wl")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
